[gd_scene load_steps=4 format=3 uid="uid://c9k3ywrhhq4yl"]

[ext_resource type="Script" path="res://scripts/presentation_room.gd" id="1_pr3s4"]

[sub_resource type="Environment" id="Environment_1abc2"]
background_mode = 1
background_color = Color(0.05, 0.05, 0.05, 1)
ambient_light_source = 2
ambient_light_color = Color(0.3, 0.1, 0.1, 1)
ambient_light_energy = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_1def3"]
size = Vector3(10, 6, 0.2)

[node name="PresentationRoom" type="Node3D"]
script = ExtResource("1_0x2y4")

[node name="Environment" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 2, 8)
fov = 60.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_1abc2")

[node name="BigScreen" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
mesh = SubResource("BoxMesh_1def3")

[node name="ScreenLight" type="OmniLight3D" parent="BigScreen"]
light_color = Color(1, 0.2, 0.2, 1)
light_energy = 2.0
omni_range = 15.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="TextContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = -50.0

[node name="NarrationText" type="RichTextLabel" parent="UI/TextContainer"]
layout_mode = 2
size_flags_vertical = 8
bbcode_enabled = true
text = ""
fit_content = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
timeout = Timer.timeout

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
